   configuration to detect the headers.

 - ECL now can compile files with constants that do not print readably, such as
   CLOS objects. In those cases, MAKE-LOAD-FORM is used to recreate these
   constants. The only case where this fail is when the "unreadable" constant
   is part of a circular structure (contributed by Brian Spilsbury).

* MOP compatibility:

 - SLOT-VALUE, SLOT-BOUNDP, etc, together with MOP SLOT*-USING-CLASS generic
   functions now rely entirely on slot-definition objects.

 - Effective slot definitions now have a "location" slot. Around methods for
   COMPUTE-SLOTS assign a location to each slot definition that has allocation
   :INSTANCE or :CLASS.

 - A new defclass option, :OPTIMIZE-SLOT-ACCESS, which defaults to the value of
   CLOS:*OPTIMIZE-SLOT-ACCESS*, controls whether the slots accessors should
   address directly the values in the class or use SLOT-VALUE. It should be set
   to NIL when one intends to redefine the SLOT-*-USING-CLASS methods, and
   to T when trying to get the most of the speed.

 - Implemented [FUNCALLABLE-]STANDARD-INSTANCE-ACCESS. They are synonyms for
   SI:INSTANCE-REF and are, as such, inlined and _very_ unsafe. Use with care.

 - Two nonstandard slots have been removed from standard-methods. Keeping track
   of which methods were in a defgeneric function is done using the property
   list of the methods.

 - When a class inherits from two or more classes, slot definitions with the
   same name must be merged. In particular, when a slot has the same name in
   two parents, all accessors from all classes should be available for the
   child.

* Errors fixed:

 - The intermediate output of the compiler is written in the directory in which
   the output will reside. [1]

 - ENSURE-GENERIC-FUNCTION relies on ENSURE-GENERIC-FUNCTION-USING-CLASS for
   doing the real work of (re)defining generic functions. This means E-G-F now
   handles :METHOD-CLASS and :GENERIC-FUNCTION-CLASS properly.
