@@ -513,10 +513,7 @@ EXPORTS
 
 	cl_macroexpand
 	cl_macroexpand_1
-
-	search_macro
-	macro_expand1
-	macro_expand
+	cl_macro_function
 
 
 	; main.c
@@ -908,7 +905,6 @@ EXPORTS
 	cl_symbol_value
 	cl_boundp
 	cl_special_operator_p
-	cl_macro_function
 
 	ecl_fdefinition
 
